New fonts, background and event dates format

--- a/src/scss/_bootstrap-overrides.scss
+++ b/src/scss/_bootstrap-overrides.scss
@@ -3,6 +3,8 @@
 }
 
 .btn-primary {
+  @include heading-font;
+  font-size: 1.8rem;
   background-color: $primary;
   border-color: $primary;
   &:active,
