--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -6,9 +6,9 @@
 // Global CSS
 @import "global.scss";
 // Components
-@import "navbar.scss";
 @import "masthead.scss";
 @import "profile.scss";
+@import "events.scss";
 @import "bootstrap-overrides.scss";
 
 .App {
