--- a/src/scss/_masthead.scss
+++ b/src/scss/_masthead.scss
@@ -1,8 +1,8 @@
 header.masthead {
   position: relative;
   overflow: hidden;
-  height: 50vh;
-  background-image: url("../img/bg2.jpg");
+  height: 70vh;
+  background-image: url("../img/header.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: scroll;
@@ -17,7 +17,7 @@ header.masthead {
       font-size: 2rem;
     }
     .masthead-subheading {
-      font-size: 1rem;
+      font-size: 1.5rem;
     }
   }
 }
