--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,8 +1,8 @@
 @mixin heading-font {
-  font-family: 'Catamaran';
-  font-weight: 800 !important;
+  font-family: "Amatic SC", cursive;
+  font-weight: 700 !important;
 }
 
 @mixin body-font {
-  font-family: 'Lato';
+  font-family: "Quicksand", sans-serif;
 }
