--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -9,6 +9,7 @@
 @import "masthead.scss";
 @import "profile.scss";
 @import "events.scss";
+@import "button.scss";
 @import "bootstrap-overrides.scss";
 
 .App {
