--- a/src/scss/_masthead.scss
+++ b/src/scss/_masthead.scss
@@ -1,7 +1,7 @@
 header.masthead {
   position: relative;
   overflow: hidden;
-  height: 70vh;
+  height: 30vh;
   background-image: url("../img/header.jpg");
   background-repeat: no-repeat;
   background-position: center center;
@@ -10,7 +10,7 @@ header.masthead {
   .masthead-content {
     text-shadow: 1px 0 0 #fff;
     img {
-      max-width: 250px;
+      max-width: 370px;
     }
     position: relative;
     .masthead-heading {
@@ -24,8 +24,11 @@ header.masthead {
 
 @media (min-width: 992px) {
   header.masthead {
-    height: 60vh;
+    height: 70vh;
     .masthead-content {
+      img {
+        max-width: 500px;
+      }
       .masthead-heading {
         font-size: 3rem;
       }
