--- a/src/scss/_masthead.scss
+++ b/src/scss/_masthead.scss
@@ -1,7 +1,7 @@
 header.masthead {
   position: relative;
   overflow: hidden;
-  height: 30vh;
+  height: 50vh;
   background-image: url("../img/header.jpg");
   background-repeat: no-repeat;
   background-position: center center;
@@ -10,13 +10,21 @@ header.masthead {
   .masthead-content {
     text-shadow: 1px 0 0 #fff;
     img {
-      max-width: 370px;
+      max-width: 350px;
     }
     position: relative;
     .masthead-heading {
       font-size: 2rem;
     }
     .masthead-subheading {
+      font-size: 1.5rem;
+    }
+    .action-button {
+      span {
+        display: block;
+        line-height: 2rem;
+      }
+      line-height: 1.5rem;
       font-size: 1.5rem;
     }
   }
@@ -30,9 +38,17 @@ header.masthead {
         max-width: 500px;
       }
       .masthead-heading {
-        font-size: 3rem;
+        font-size: 3.5rem;
       }
       .masthead-subheading {
+        font-size: 2.5rem;
+      }
+      .action-button {
+        span {
+          display: block;
+          line-height: 2rem;
+        }
+        line-height: 2.5rem;
         font-size: 2rem;
       }
     }
