--- a/src/scss/_bootstrap-overrides.scss
+++ b/src/scss/_bootstrap-overrides.scss
@@ -16,6 +16,22 @@
   &:focus {
     box-shadow: 0 0 0 0.2rem fade-out($primary, 0.5);
   }
+  &.disabled {
+    color: white !important;
+    background-color: rgba(128, 128, 128, 0.3);
+    border-color:  rgba(128, 128, 128, 0.3);
+    &:hover {
+      cursor: not-allowed;
+      background-color: rgba(128, 128, 128, 0.3) !important;
+      border-color:  rgba(128, 128, 128, 0.8) !important;
+    }
+    &:focus {
+      cursor: not-allowed;
+      background-color: rgba(128, 128, 128, 0.3) !important;
+      border-color:  rgba(128, 128, 128, 0.8) !important;
+      box-shadow: none;
+    }
+  }
 }
 
 .btn-secondary {
